@@ -14,6 +14,7 @@ sox-12.1x.xx
     bugs and stuck in infinite loop.
   o Stop SoX from crashing when file type could not be auto
     determined (bug 1417776).
+  o Output filenames with multiple '.' confused SoX.  (Christian Hammers)
 
 sox-12.17.9
 -----------
